# Copyright 2024 The Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("content_settings") {
  public = [
    "cookie_settings_factory.h",
    "host_content_settings_map_factory.h",
  ]

  sources = [
    "cookie_settings_factory.cc",
    "host_content_settings_map_factory.cc",
  ]

  deps = [
    "//base",
    "//components/content_settings/browser",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
    "//components/custom_handlers",
    "//components/permissions",
    "//components/prefs",
    "//content/public/browser",
    "//radium/browser/profiles",
    "//third_party/blink/public/common",
    "//ui/webui",
  ]
}
