# Copyright 2024 The Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("enterprise") {
  public = [ "certificate_provisioning_service_factory.h" ]

  sources = [ "certificate_provisioning_service_factory.cc" ]

  deps = [
    "//base",
    "//components/enterprise/client_certificates/core",
    "//components/enterprise/core",
    "//components/keyed_service/core",
  ]
}
