# Copyright 2024 The Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("tab_contents") {
  sources = [
    "web_contents_collection.cc",
    "web_contents_collection.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
  ]
}
